<resources>

    <string name="app_name">eDakia</string>
    <string name="hello_edakia">Welcome to eDakia!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">eDakia</string>
    <string name="option_send_button">Send Document \n ई-डाक भेजे </string>
    <string name="option_receive_button">Receive Document \n ई-डाक पाए</string>
    <string name="option_print">Print Document \n कॉपी करे</string>

    <color name="green">#d1f099</color>
    <color name="yellow">#f9f9dd</color>
    <color name="red">#ff0000</color>
    <color name="black">#000000</color>
    <color name="white">#FFFFFF</color>
    <color name="light_green">#CEF2E0</color>
    <color name="status_stroke">#EED3D7</color>
    <color name="status_background">#F2DEDE</color>
    <color name="status_color">#B94A48</color>

    <string name="hello_world">Hello world!</string>
    <string name="postage">Mail Postage</string>
    <string name="title_activity_receive">eDakia - Receive</string>
    <string name="personal_mobile">Your Mobile Number</string>
    <string name="mobile">Your Mobile Number (आपका मोबाइल नंबर)</string>
    <string name="receiver_mobile">Receiver Mobile Number</string>
    <string name="secret_code">eDak Code (ई-डाक कोड)</string>
    <string name="receive">eDak Receive \n ई-डाक पाए</string>
    <string name="print">Print \n छापिये</string>
    <string name="title_activity_print">eDakia - Print</string>
    <string name="option_print_button">onPrintClick</string>
    <string name="EmptyString"></string>
    <string name="title_activity_authenticate">eDakia - Authenticate</string>
    <string name="title_activity_change_password">eDakia - Change Passcode</string>
    <string name="authenticate_activity_mobile">Your Mobile Number \n आपका मोबाइल नंबर</string>
    <string name="authenticate_activity_password">Your Passcode \n आपका पास कोड</string>
    <string name="authenticate_activity_authenticate_button">Login \n साइन</string>
    <string name="title_activity_send">eDakia - Send File</string>
    <string name="receiver_mobile_send_activity">Receiver Mobile Number \n पाने वाले का मोबाइल नंबर</string>
    <string name="receiver_email_send_activity">Receiver Email ID \n पाने वाले का ई-मेल</string>
    <string name="local_file_send_activity">Search a file</string>
    <string name="select_file_send_activity">Select a file to send</string>
    <string name="edakia_file_send_activity">Select a file from your Edakia account.</string>
    <string name="recently_scanned_file_send_activity">Scan and send the file.</string>
    <string name="send_button_scan_activity">Copy \n कॉपी</string>
    <string name="send_button_search_activity">Search \n खोजे</string>
    <string name="title_activity_confirm_send">eDakia - Confirm Your Scan</string>
    <string name="title_activity_pop_up">eDakia - Confirm Your Scan</string>
    <string name="title_activity_browser_pictures">BrowserPicturesActivity</string>
    <string name="title_activity_file_selection">Select a File to Send</string>
    <string name="homeButton">Cancel Mail</string>
    <string name="title_activity_base">eDakia - Base</string>
    <string name="receiver_email_receive_activity">Email Address (ई-मेल)</string>
    <string name="ORText">OR (या)</string>
    <string name="option_email_button"><u>E-Mail (ई-मेल)</u> ?</string>
    <string name="option_mobile_button"><u>Mobile (मोबाइल)</u> ?</string>

    <!-- Error messages -->
    <!--
    <string name="empty_mobile_passcode">Please Enter Mobile and Password \n मोबाइल नंबर व पास कोड डाले </string>
    <string name="empty_mobile">Please Enter Mobile Number \n मोबाइल नंबर डाले</string>
    <string name="empty_passcode">Please Enter Passcode \n पास कोड डाले </string>
    <string name="invalid_mobile">Invalid Mobile Number \n गलत मोबाइल नंबर </string>
    <string name="invalid_passcode">Invalid Passcode \n गलत पास कोड</string>
    <string name="invalid_mobile_passcode">Invalid Mobile and Passcode \n गलत मोबाइल व पास कोड </string>
    <string name="login_failed">Login Failed! Incorrect Mobile or Password \n गलत मोबाइल या पास कोड </string>
    <string name="login_error">Network Error! Try After Sometime</string>
    <string name="empty_receiver_email">Enter Receiver Email \n पाने वाले का ई-मेल डाले </string>
    <string name="invalid_receiver_email">Invalid Receiver Email Address \n गलत ई-मेल </string>
    <string name="empty_receiver_mobile">Enter Receiver Mobile Number \n पाने वाले का मोबाइल नंबर डाले </string>
    <string name="invalid_receiver_mobile">Invalid Receiver Mobile Number \n गलत मोबाइल नंबर </string>
    <string name="none_receiver_email_mobile">Please Enter Receiver Mobile or Email \n पाने वाले का मोबाइल या ई-मेल डाले</string>
    <string name="both_receiver_email_mobile">Provide Either Receiver Mobile OR Email \n पाने वाले का मोबाइल या ई-मेल डाले</string>
    <string name="send_canceled">eDak Sending Canceled \n ई-डाक रद्द </string>
    <string name="send_error">eDak Sending Failed \n ई-डाक विफल</string>
    <string name="send_success">eDak Successfully Sent \n ई-डाक सफल</string>
    <string name="empty_email">Enter Email Address \n पाने वाले का ई-मेल डाले </string>
    <string name="invalid_email">Invalid Email Address \n गलत ई-मेल </string>
    <string name="none_mobile_email">Please Enter Mobile OR Email \n मोबाइल या ई-मेल डाले </string>
    <string name="both_mobile_email">Provide Either Mobile OR Email \n मोबाइल या ई-मेल डाले</string>
    <string name="all_mobile_email_secret_code">Please Enter Mobile and eDak Code \n मोबाइल व ई-डाक कोड डाले</string>
    <string name="empty_secret_code">Please Enter eDak Code \n डाक कोड डाले</string>
    <string name="invalid_secret_code">Invalid eDak Code \n गलत डाक कोड </string>
    <string name="receive_failed">Sorry! eDak Not Found \n ई-डाक विफल</string>
    <string name="receive_error">Error! Try After Sometime</string>
    -->

    <string name="empty_mobile_passcode">Enter Mobile and Password \n मोबाइल नंबर व पास कोड डाले </string>
    <string name="empty_mobile">Enter Mobile Number \n मोबाइल नंबर डाले</string>
    <string name="empty_passcode">Enter Passcode \n पास कोड डाले </string>
    <string name="invalid_mobile">Invalid Mobile Number \n गलत मोबाइल नंबर </string>
    <string name="invalid_passcode">Invalid Passcode \n गलत पास कोड</string>
    <string name="invalid_mobile_passcode">Invalid Mobile Number and Passcode \n गलत मोबाइल नंबर व पास कोड </string>
    <string name="login_failed">Login Failed! Incorrect Mobile Number or Password \n गलत मोबाइल नंबर या पास कोड </string>
    <string name="chngPwd_failed">Failed! Incorrect Mobile or old Password \n गलत मोबाइल या पास कोड </string>
    <string name="login_error">Network Error! Try After Sometime</string>
    <string name="empty_receiver_email">Enter Receiver Email \n पाने वाले का ई-मेल डाले </string>
    <string name="invalid_receiver_email">Invalid Receiver Email Address \n गलत ई-मेल </string>
    <string name="empty_receiver_mobile">Enter Receiver Mobile Number \n पाने वाले का मोबाइल नंबर डाले </string>
    <string name="invalid_receiver_mobile">Invalid Receiver Mobile Number \n गलत मोबाइल नंबर </string>
    <string name="none_receiver_email_mobile">Enter Receiver Mobile or Email \n पाने वाले का मोबाइल या ई-मेल डाले</string>
    <string name="both_receiver_email_mobile">Provide Either Receiver Mobile OR Email \n पाने वाले का मोबाइल या ई-मेल डाले</string>
    <string name="send_canceled">eDak Sending Canceled \n ई-डाक रद्द </string>
    <string name="send_error">eDak Sending Failed \n ई-डाक विफल</string>
    <string name="send_success">eDak Successfully Sent \n ई-डाक सफल</string>
    <string name="empty_email">Enter Email Address \n पाने वाले का ई-मेल डाले </string>
    <string name="invalid_email">Invalid Email Address \n गलत ई-मेल </string>
    <string name="none_mobile_email">Enter Mobile Number OR Email \n मोबाइल नंबर या ई-मेल डाले </string>
    <string name="both_mobile_email">Enter Either Mobile Number OR Email \n मोबाइल नंबर या ई-मेल डाले</string>
    <string name="all_mobile_email_secret_code">Enter Mobile Number and eDak Code \n मोबाइल नंबर व ई-डाक कोड डाले</string>
    <string name="empty_secret_code">Enter eDak Code \n डाक कोड डाले</string>
    <string name="invalid_secret_code">Invalid eDak Code \n गलत डाक कोड </string>
    <string name="receive_failed">Sorry! eDak Not Found \n ई-डाक विफल</string>
    <string name="receive_error">Error! Try After Sometime</string>

    <!-- Transaction details related to be shown for cost dialog -->
    <string name="costDialogTitle">Transaction Details</string>
    <string name="costDialogSentMsg">eDak Sent Successfully \n ई-डाक सफल \n\n</string>
    <string name="costDialogReceiveMsg">eDak Received Successfully \n ई-डाक सफल \n\n</string>
    <string name="costDialogCostMsg">Cost: Rs </string>
    <string name="resultDialogNeturalBtn">OK</string>

    <!-- Transaction details related to be shown forchange password dialog -->
    <string name="chngPwdDialogTitle">Change Password</string>
    <string name="chngPwdDialogMsg">Changed password Successfully \n</string>

    <!-- Transaction details related to be shown for confirm send dialog -->
    <string name="confirmSendDialogTitle">eDak Send Confirmation</string>
    <string name="confirmSendDialogMsg">\n Press Send Button \n ई-डाक भेजने के लिए SEND दबाये \n</string>
    <string name="confirmSendDialogPositiveBtn">Send \n भेजे</string>
    <string name="confirmSendDialogNegativeBtn">Cancel \n रद्द </string>

    <!-- Details to be shown for all progress dialogs. -->
    <string name="receiveDocPrgDlg">eDak Receiving. Wait &#8230; \n इंतज़ार करे &#8230;</string>
    <string name="sendDocPrgDlg">eDak Sending. Wait &#8230; \n ई-डाक भेज रहे| इंतज़ार करे &#8230;</string>
    <string name="authUserPrgDlg">Verifying. Wait &#8230; \n इंतज़ार करे &#8230;</string>
    <string name="chngPwdPrgDlg">Wait Changing Password &#8230; \n इंतज़ार करे &#8230;</string>

    <!-- Details to be shown on change password activity -->
    <string name="chngPwdTxtMsg">My New Passcode</string>
    <string name="chngPwdMobileLabel">Your Mobile Number</string>
    <string name="chngPwdOldPwdLabel">Your Old Passcode</string>
    <string name="chngPwdNewPwdLabel">Your New Passcode</string>
    <string name="chngPwdNewPwdAgnLabel">Confirm New Passcode</string>
    <string name="chngPwdBtnTxt">Save</string>

</resources>