<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/Error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/EmptyString"
        android:textColor="@color/red" />
    
    <TextView
       android:id="@+id/receiverEmailText"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:layout_marginTop="20dp"
       android:text="@string/receiver_email_receive_activity"
       android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/receiverEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="12"
        android:inputType="textEmailAddress" />
    
     <TextView
        android:id="@+id/ORString"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ORText" />
    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/mobile"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/receiveMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="10"
        android:padding="@dimen/padding_small" >

        <requestFocus />
    </EditText>

    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/secret_code"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    

    <EditText
        android:id="@+id/secretCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6" />

    <Button
        android:id="@+id/receiveNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button"
        android:layout_gravity="center"
        android:onClick="getDocument"
        android:padding="20dp"
        android:text="@string/receive"
        android:textColor="@color/white"
        android:textSize="24dip" />

</LinearLayout>
