<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="right" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/green"
        android:minHeight="10dp"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/textview01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:onClick="@string/option_print_button"
        android:text="@string/print" 
        android:background="@color/green"
        />

    <ImageView
        android:id="@+id/imageview01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/EmptyString"
        android:cropToPadding="true" />
    
   <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@color/green"
        android:minHeight="10dp"
        android:orientation="vertical">
    </LinearLayout>

    <Button
        android:id="@+id/CancelTransaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottomlayout"
        android:background="@color/green"
        android:text="@string/homeButton" 
        android:onClick="rediretHomeActivity"
        android:layout_centerHorizontal="true"
        android:paddingLeft="31dp"
        android:paddingRight="31dp"
        android:layout_marginBottom="5dp"
        />

</RelativeLayout>
