<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
     
    <ImageView
        android:id="@+id/errImgMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_error" />

    <EditText
        android:id="@+id/mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/oldPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mobile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/newPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mobile"
        android:layout_centerVertical="true"
        android:layout_marginLeft="18dp"
        android:ems="10"
        android:inputType="numberPassword" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newPwdAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mobile"
        android:layout_below="@+id/newPwd"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/ChngPwdBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/mobile"
        android:layout_marginBottom="24dp"
        android:background="@drawable/button"
        android:onClick="changePassword"
        android:padding="20dp"
        android:text="@string/chngPwdBtnTxt"
        android:textColor="@color/white"
        android:textSize="24dip" />

    <ImageView
        android:id="@+id/errImgNewPwdAgn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newPwdAgain"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_error" />

    <ImageView
        android:id="@+id/errImgNewPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newPwd"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_error" />

    <ImageView
        android:id="@+id/errImgOldPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/oldPwd"
        android:layout_alignParentLeft="true"
        android:src="@drawable/ic_error" />

    <TextView
        android:id="@+id/ChangePwdTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/chngPwdTxtMsg" />

    <TextView
        android:id="@+id/MobileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/errImgMobile"
        android:layout_alignLeft="@+id/ChangePwdTxt"
        android:text="@string/chngPwdMobileLabel" />

    <TextView
        android:id="@+id/oldPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/MobileLabel"
        android:layout_alignTop="@+id/errImgOldPwd"
        android:text="@string/chngPwdOldPwdLabel" />

    <TextView
        android:id="@+id/newPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/oldPasswordLabel"
        android:layout_alignTop="@+id/errImgNewPwd"
        android:text="@string/chngPwdNewPwdLabel" />

    <TextView
        android:id="@+id/newPwdAgainLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newPasswordLabel"
        android:layout_alignTop="@+id/errImgNewPwdAgn"
        android:text="@string/chngPwdNewPwdAgnLabel"/>

    <TextView
        android:id="@+id/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ChangePwdTxt"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/oldPasswordLabel"
        android:gravity="center"
        android:text="@string/EmptyString"
        android:textColor="@color/red" />

</RelativeLayout>
