<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:ignore="ContentDescription" >

    <TextView
        android:id="@+id/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/padding_medium"
        android:background="@drawable/status"
        android:gravity="center"
        android:padding="@dimen/padding_medium"
        android:text="@string/EmptyString"
        android:textColor="@color/status_color"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center|center_horizontal"
        android:text="@string/authenticate_activity_mobile"
        android:textSize="@dimen/veryLargeText"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >
        
        <EditText
            android:id="@+id/YourMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:enabled="true"
            android:gravity="center|center_horizontal"
            android:inputType="number"
            android:maxLength="10"
            android:padding="@dimen/padding_small"
            android:scrollHorizontally="true"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/largeText" >

        <requestFocus />
	    </EditText>
	    
	    <ImageView
	        android:id="@+id/errImgMob"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_error" />
    </LinearLayout>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:gravity="center|center_horizontal"
        android:text="@string/authenticate_activity_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="@dimen/veryLargeText" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginLeft="20dip"
        android:layout_marginTop="10dip"
        android:layout_gravity="center" >

	    <EditText
	        android:id="@+id/YourPassword"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:ems="10"
	        android:gravity="center|center_horizontal"
	        android:inputType="numberPassword|numberSigned"
	        android:maxLength="6"
	        android:textSize="@dimen/largeText" />
	    
	    <ImageView
	        android:id="@+id/errImgPwd"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:src="@drawable/ic_error" />
	</LinearLayout>
	
    <Button
        android:id="@+id/receiveNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/button"
        android:onClick="authenticate"
        android:padding="@dimen/padding_large"
        android:text="@string/authenticate_activity_authenticate_button"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/veryLargeText" />

</LinearLayout>